second header content unfinished

--- a/index.html
+++ b/index.html
@@ -44,9 +44,18 @@
  		</div> 
  		<div id="top-last">
  			<div id="lastTaskSelect">
- 				
+ 				<select id="taskName">
+ 					<option value="Market Mail">MarketMail</option>
+ 					<option value="contact">Contacts</option>
+ 					<option value="Campaign">Campaign</option>
+ 				</select>
  			</div>
- 		    <div id="lasttabs"></div>
+ 		    <div id="lastoptntabs">
+ 		    	<button class="dropbtn">
+ 		    		<input type="checkbox" class="uncheck">
+ 		    		<span><i class="fas fa-arrow-alt-circle-down"></i></span>
+ 		    	</button>
+ 		    </div>
  		    <div id="lastAccountPref"></div>
  		    <span class="sort">sort</span>
  		    <div id="sortpos">
